--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css" integrity="sha384-PDle/QlgIONtM1aqA2Qemk5gPOE7wFq8+Em+G/hmo5Iq0CCmYZLv3fVRDJ4MMwEA" crossorigin="anonymous">
 </head>
 <body>
-    <h1>My First Bootstrap 4 Page</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                Row 1 Col 2
+            </div>
+            <div class="col">
+                Row 1 Col 2
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                Row 2 Col 1
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
