--- a/index.html
+++ b/index.html
@@ -6,19 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bootstrap 4 Introduction</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css" integrity="sha384-PDle/QlgIONtM1aqA2Qemk5gPOE7wFq8+Em+G/hmo5Iq0CCmYZLv3fVRDJ4MMwEA" crossorigin="anonymous">
+    <style>
+        body {
+            margin: 30px;
+        }
+
+        .my-container {
+            border: 1px solid green;
+        }
+
+        .my-row {
+            border: 3px solid red;
+        }
+
+        .my-col {
+            border: 3px dotted blue;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col">
+    <div class="container my-container">
+        <div class="row my-row">
+            <div class="col my-col">
                 Row 1 Col 2
             </div>
-            <div class="col">
+            <div class="col my-col">
                 Row 1 Col 2
             </div>
         </div>
-        <div class="row">
-            <div class="col">
+        <div class="row my-row">
+            <div class="col my-col">
                 Row 2 Col 1
             </div>
         </div>
