--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 <body>
     <div class="container my-container">
         <div class="row my-row">
-            <div class="col-4 my-col">
+            <div class="col-md-4 my-col">
                 Row 1 Col 2
             </div>
-            <div class="col-8 my-col">
+            <div class="col-md-8 my-col">
                 Row 1 Col 2
             </div>
         </div>
