--- a/index.html
+++ b/index.html
@@ -34,9 +34,12 @@
                 Row 1 Col 2
             </div>
         </div>
-        <div class="row my-row">
-            <div class="col my-col">
+        <div class="row justify-content-center my-row">
+            <div class="col-4 my-col">
                 Row 2 Col 1
+            </div>
+            <div class="col-4 my-col">
+                Row 2 Col 2
             </div>
         </div>
     </div>
