different types of justify-content

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                 Row 1 Col 2
             </div>
         </div>
-        <div class="row justify-content-center my-row">
+        <div class="row justify-content-between my-row">
+        <!-- En justify-content-... podemos poner center, start, end, around, between -->
             <div class="col-4 my-col">
                 Row 2 Col 1
             </div>
