--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
                 Row 1 Col 2
             </div>
         </div>
-        <div class="row justify-content-between my-row">
+        <div class="row justify-content-between align-items-stretch my-row">
         <!-- En justify-content-... podemos poner center, start, end, around, between -->
-            <div class="col-4 my-col">
+        <!-- En align-items-... podemos poner start, center(vertical center), stretch -->
+            <div class="col-4 my-col align-self-center">
+            <!-- Usamos align-self-... para lo mismo pero en una columna especifica -->
                 Row 2 Col 1
             </div>
             <div class="col-4 my-col">
