--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         <div class="row justify-content-between align-items-stretch my-row">
         <!-- En justify-content-... podemos poner center, start, end, around, between -->
         <!-- En align-items-... podemos poner start, center(vertical center), stretch -->
-            <div class="col-4 my-col align-self-center">
+            <div class="col-4 my-col align-self-center order-2">
             <!-- Usamos align-self-... para lo mismo pero en una columna especifica -->
                 Row 2 Col 1
             </div>
-            <div class="col-4 my-col">
+            <div class="col-4 my-col order-1">
                 Row 2 Col 2
             </div>
         </div>
