--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
         <div class="row justify-content-between align-items-stretch my-row">
         <!-- En justify-content-... podemos poner center, start, end, around, between -->
         <!-- En align-items-... podemos poner start, center(vertical center), stretch -->
-            <div class="col-4 my-col align-self-center order-md-2">
+            <div class="col-4 offset-2 my-col order-md-2">
             <!-- Usamos align-self-... para lo mismo pero en una columna especifica -->
+            <!-- Usamos offset-n para recorrer n lugares a la derecha la columna (tambien puede ser responsive offset-md-2) -->
                 Row 2 Col 1
             </div>
             <div class="col-4 my-col order-md-1">
