--- a/index.html
+++ b/index.html
@@ -6,49 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bootstrap 4 Introduction</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css" integrity="sha384-PDle/QlgIONtM1aqA2Qemk5gPOE7wFq8+Em+G/hmo5Iq0CCmYZLv3fVRDJ4MMwEA" crossorigin="anonymous">
-    <style>
-        body {
-            margin: 30px;
-        }
-
-        .my-container {
-            border: 1px solid green;
-        }
-
-        .my-row {
-            border: 3px solid red;
-            height: 300px;
-        }
-
-        .my-col {
-            border: 3px dotted blue;
-        }
-    </style>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <div class="container my-container">
-        <div class="row my-row">
-            <div class="col-md-4 col-sm-6 my-col">
-                Row 1 Col 2
-            </div>
-            <div class="col-md-8 col-sm-6 my-col">
-                Row 1 Col 2
-            </div>
-        </div>
-        <div class="row justify-content-between align-items-stretch my-row">
-        <!-- En justify-content-... podemos poner center, start, end, around, between -->
-        <!-- En align-items-... podemos poner start, center(vertical center), stretch -->
-            <div class="col-4 offset-2 my-col order-md-2">
-            <!-- Usamos align-self-... para lo mismo pero en una columna especifica -->
-            <!-- Usamos offset-n para recorrer n lugares a la derecha la columna (tambien puede ser responsive offset-md-2) -->
-                Row 2 Col 1
-            </div>
-            <div class="col-4 my-col order-md-1">
-            <!-- Con el md de order-md-1 añadimos que la condición se cumpla sólo para cierto tamaño de pantallas -->
-                Row 2 Col 2
-            </div>
-        </div>
-    </div>
+    
 
 </body>
 </html>
