modified list of navbar items to make them horizontal in lg (large) screens

--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <!-- navbar-light es un tema y bg-light es el background -->
         <a href="#" class="navbar-brand">Academind</a>
-        <ul class="navbar-nav">
-        <!-- Usamos mr-auto en la clase de arriba si quremos que no ponga los elementos de la lista hasta la derecha -->
-            <li class="nav-item">
-                <a href="#" class="nav-link">Users</a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link">Products</a>
-            </li>
-        </ul>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ml-auto">
+            <!-- Usamos mr-auto en la clase de arriba si quremos que no ponga los elementos de la lista hasta la derecha -->
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Users</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Products</a>
+                </li>
+            </ul>
+        </div>
     </nav>    
 
 </body>
