changed color style of navbar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <!-- navbar-light es un tema y bg-light es el background -->
         <a href="#" class="navbar-brand">Academind</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
