--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="row">
             <div class="col">
-                <div class="alert alert-primary" role="alert">
+                <div class="alert alert-secondary" role="alert">
                     I am an alert
                 </div>      
             </div>
