--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         </div>
         <div class="row">
             <div class="col">
-                <div class="alert alert-secondary" role="alert">
+                <div class="alert alert-success" role="alert">
+                <!-- En alert-... podemos poner primary, secondary, success, danger, warning, info -->
                     I am an alert
                 </div>      
             </div>
