--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
             <div class="col">
                 <div class="alert alert-success" role="alert">
                 <!-- En alert-... podemos poner primary, secondary, success, danger, warning, info -->
-                    I am an alert
+                    <h2 class="alert-heading">This is an alert!</h2>
+                    <p>
+                        I am an alert <a href="#" class="alert-link">Click me!</a>
+                    </p> 
+                    <!-- <button type="button"><span aria-hidden="true">&times;</span> </button> -->
                 </div>      
             </div>
         </div>
