--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         </div>
         <div class="row">
             <div class="col">
-                <div class="alert alert-success" role="alert">
-                <!-- En alert-... podemos poner primary, secondary, success, danger, warning, info -->
+                <div class="alert alert-success alert-dismissable" role="alert">
+                <!-- En alert-... podemos poner primary, secondary, success, danger, warning, info (para el color que debe tener)-->
+                    <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span> </button>
                     <h2 class="alert-heading">This is an alert!</h2>
                     <p>
                         I am an alert <a href="#" class="alert-link">Click me!</a>
                     </p> 
-                    <!-- <button type="button"><span aria-hidden="true">&times;</span> </button> -->
                 </div>      
             </div>
         </div>
