--- a/index.html
+++ b/index.html
@@ -35,6 +35,22 @@
                 <h1>Alerts and Modals</h1>
             </div>
         </div>
+        <div class="modal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h2 class="modal-title">Please confirm</h2>
+                        <button type="button" class="close"><span>&times;</span></button>
+                    </div>
+                    <div class="modal-body">
+                        <p>This is the modal body</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary">Confirm</button>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="row">
             <div class="col">
                 <div class="alert alert-success alert-dismissable" role="alert">
