added display for spliding modal when closes

--- a/index.html
+++ b/index.html
@@ -29,18 +29,20 @@
         </div>
     </nav>   
     
-    <div class="modal" id="demoModal">
+    <div class="modal fade" id="demoModal">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <h2 class="modal-title">Please confirm</h2>
-                    <button type="button" class="close"><span>&times;</span></button>
+                    <button type="button" class="close" data-dismiss="modal">
+                        <span>&times;</span>
+                    </button>
                 </div>
                 <div class="modal-body">
                     <p>This is the modal body</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary">Confirm</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Confirm</button>
                 </div>
             </div>
         </div>
