--- a/index.html
+++ b/index.html
@@ -29,49 +29,10 @@
         </div>
     </nav>   
     
-    <div class="modal fade" id="demoModal">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h2 class="modal-title">Please confirm</h2>
-                    <button type="button" class="close" data-dismiss="modal">
-                        <span>&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <p>This is the modal body</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Confirm</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <h1>Alerts and Modals</h1>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <div class="alert alert-success alert-dismissable" role="alert">
-                <!-- En alert-... podemos poner primary, secondary, success, danger, warning, info (para el color que debe tener)-->
-                    <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span> </button>
-                    <h2 class="alert-heading">This is an alert!</h2>
-                    <p>
-                        I am an alert <a href="#" class="alert-link">Click me!</a>
-                    </p> 
-                </div>      
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#demoModal">Show Modal</button>
-            </div>
-        </div>
-    </div>
+    <form action="">
+        <input type="text" name="username">
+        <input type="password" name="password">
+    </form>
     
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
