added labels and ids for each label

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
     </nav>   
     
     <form action="">
-        <input type="text" name="username">
-        <input type="password" name="password">
+        <label for="username">Username</label>
+        <input type="text" name="username" id="username">
+        <label for="password">Password</label>
+        <input type="password" name="password" id="password">
     </form>
     
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
