--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
         <input type="text" name="username" id="username" class="form-control">
         <label for="password">Password</label>
         <input type="password" name="password" id="password" class="form-control">
+        <label for="gender">Gender</label>
+        <select name="gender" id="gender" class="form-control">
+            <option value="male">Male</option>
+            <option value="female">Female</option>
+        </select>
     </form>
     
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
