--- a/index.html
+++ b/index.html
@@ -30,15 +30,21 @@
     </nav>   
     
     <form action="" style="width: 500px; margin:auto">
-        <label for="username">Username</label>
-        <input type="text" name="username" id="username" class="form-control">
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password" class="form-control">
-        <label for="gender">Gender</label>
-        <select name="gender" id="gender" class="form-control">
-            <option value="male">Male</option>
-            <option value="female">Female</option>
-        </select>
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" name="username" id="username" class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password" class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="gender">Gender</label>
+            <select name="gender" id="gender" class="form-control">
+                <option value="male">Male</option>
+                <option value="female">Female</option>
+            </select>
+        </div>
         <div class="form-check">
             <input type="checkbox" id="accept-terms" class="form-check-input">
             <label for="accept-terms" class="form-check-label">Accept Terms &amp; Conditions</label>
