--- a/index.html
+++ b/index.html
@@ -29,10 +29,20 @@
         </div>
     </nav>   
     
-    <form action="" style="width: 500px; margin:auto">
-        <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" name="username" id="username" class="form-control">
+    <form action="" class="main-form">
+        <div class="row">
+            <div class="col">
+                <div class="form-group">
+                    <label for="firstname">Firstname</label>
+                    <input type="text" name="firstname" id="firstname" class="form-control">
+                </div>
+            </div>
+            <div class="col">
+                <div class="form-group">
+                    <label for="lastname">Lastname</label>
+                    <input type="text" name="lastname" id="lastname" class="form-control">
+                </div>
+            </div>
         </div>
         <div class="form-group">
             <label for="password">Password</label>
