added small text under an input

--- a/index.html
+++ b/index.html
@@ -34,13 +34,17 @@
             <div class="col">
                 <div class="form-group">
                     <label for="firstname">Firstname</label>
-                    <input type="text" name="firstname" id="firstname" class="form-control">
+                    <input type="text" name="firstname" id="firstname" class="form-control is-invalid">
+                    <!-- <div class="invalid-feedback">Loosks good!</div> -->
                 </div>
             </div>
             <div class="col">
                 <div class="form-group">
                     <label for="lastname">Lastname</label>
                     <input type="text" name="lastname" id="lastname" class="form-control">
+                    <small>
+                        This should be your lastname 
+                    </small>
                 </div>
             </div>
         </div>
