added styles to button

--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
             <input type="checkbox" id="accept-terms" class="form-check-input">
             <label for="accept-terms" class="form-check-label">Accept Terms &amp; Conditions</label>
         </div>
-        <button type="submit">Submit</button>
+        <button type="submit" class="btn btn-outline-primary">Submit</button>
+        <!-- btn-... puede ser secondary, success, danger, warning, etc (los mismos que alert) -->
+        <!-- btn-outline-success hace que el boton se vea transparente -->
     </form>
     
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
